--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Netflix</string>
+    <string name="menu_mensagem">Menu Mensagem</string>
+    <string name="menu_volume">Menu Volume</string>
+    <string name="menu_avalia_es">Menu Avaliações</string>
+    <string name="menu_epis_dios">Menu Episódios</string>
+    <string name="house_of_cards">House Of Cards</string>
+    <string name="s1_e2">S1:E2</string>
 </resources>
